# manimeme

./: README.md  manimeme-md.py  manimeme.py  pyproject.toml
